assets/less/new/layout.less
/* ... */
.newsletter {
  display: grid;
  place-items: center;
  margin: 0;
}

.newsletter-form {
  border: 2px solid currentColor;
  border-radius: 6px;
  max-width: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

.newsletter-form input {
  background: none;
  border: none;
  color: currentColor;
  padding: .75rem 1rem;
  margin: 0;
  font-size: 1rem;
}

.btn-newsletter {
  position: relative;
  background: none;
  border: none;
  border-radius: 0;
  border-inline-start: 2px solid currentColor;
  padding: .75rem 2.5rem;
  margin: 0;
  font-size: 1rem;
}

.btn-newsletter::after {
  content: '';
  position: absolute;
  background-color: transparent;
  background-image: radial-gradient(circle, var(--accent), var(--color-purple-60) 20%);
  background-size: 0;
  background-position: center;
  opacity: 0;
  inset: 0;
  z-index: 0;
  transition: all .3s;
}

.btn-newsletter:hover::after {
  opacity: .25;
  background-size: 800%;
}

.btn-newsletter-icon {
  display: none;
  padding: .75em 1em;
}

.social-list a {
  text-decoration: none;
}

.phone {
  max-width: calc(100vw - 2rem);
  width: 500px;
  margin-inline: auto;
  margin-block: -125px -650px;
}

footer {
  background-color: black;
  color: var(--color-gray-20);
}

.container.footer {
  place-items: center;
  padding-inline: 1rem;
  padding-block: 6rem;
  // Prevent overflow on smol devices
  box-sizing: border-box;
  // Always have this. (FIXME: This should be done cleaner)
  gap: 60px !important;
}

.footer-ln {
  font-size: 1.1rem;
}

.legal-links {
  display: flex;
  gap: 30px;
  flex-wrap: wrap;
  justify-content: center;
}

.legal-links {
  font-size: 1rem;
}

.mzla {
  display: grid;
  place-items: center;
  gap: 15px;
  text-align: center;
  max-inline-size: 75ch;
}

.mozilla-logo {
  --accent: white;
  max-width: 200px;
}

.fill-current {
  display: none;
}

/*
@media (max-width: 860px) {
  .testimonials {
    display: grid;
    gap: 15px;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
  }

  .testimonial-card,
  .card-lg,
  .card-lg:nth-child(even) {
    grid-template-columns: 1fr;
    grid-column: span 1;
    grid-row: span 2;
    place-items: start;
    background-image: none;
  }

  .nav-ln {
    display: none;
  }

  .visual {
    display: none;
  }
}


@media (max-width: 780px) {
  .nav-container {
    justify-content: center;
  }

  .nav-links {
    display: none;
  }

  .testimonials {
    margin-block: 0;
  }

  .cta {
    margin-top: 32px;
  }

  .tagline {
    font-size: 4rem;
  }

  .btn-newsletter-text {
    display: none;
  }

  .btn-newsletter-icon {
    display: inline-block;
  }

  .phone {
    margin-block: -125px -350px;
  }
}


@media (max-width: 512px) {
  .container {
    padding-block: 32px;
  }

  .tagline {
    font-size: 3rem;
  }

  .cta-heading {
    font-size: 3rem;
  }
}


.download-other {
  text-align: center;
  margin-top: -1rem;
}

.small-link {
  font-size: 80%;
}
 */
.small-link {
  font-size: 80%;
}

